syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";

package order;

message CheckoutMessage {
  string order_id = 1 [(.cloudstate.entity_key) = true];
  string cart_id = 2;
  string user_id = 3;
  string request_id = 4;
}

service OrderService {
  rpc Checkout(CheckoutMessage) returns (google.protobuf.Empty);
}
