syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";

package shoppingcart;

message AddToCartMessage {
  string cart_id = 1 [(.cloudstate.entity_key) = true];
  string product_id = 2;
  int32 amount = 3;
}

service ShoppingCartService {
  rpc AddToCart(AddToCartMessage) returns (google.protobuf.Empty);
}
