syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";

package user;

message AddCreditsMessage {
  string user_id = 1 [(.cloudstate.entity_key) = true];
  int32 amount = 2;
  string request_id = 3;
}

message RetractCreditsMessage {
  string user_id = 1 [(.cloudstate.entity_key) = true];
  int32 amount = 2;
  string request_id = 3;
}

message RetractCreditsResponse {
  bool success = 1;
}

service UserService {
  rpc AddCredits(AddCreditsMessage) returns (google.protobuf.Empty);
  rpc RetractCredits(RetractCreditsMessage) returns (RetractCreditsResponse);
}
